Improve YamlSchemaEditorNotificationProvider to handle edge cases: ignore docker-compose files, add support for "imports" root keys.